# Book_Recap

./: .env.example  .gitignore  Dockerfile.backend  ENHANCED_FEATURES.md  README.md  README_WEB.md  WEB_QUICKSTART.md  agent_sdk_step1_demo.py  config.example.yaml  config.py  docker-compose.yml  prompts.py  pyproject.toml  pytest.ini  requirements.txt  start.py  start_dev.sh  start_web.sh  stop_dev.sh
backend/: celery_app.py  database.py  main.py
backend/api/: __init__.py  editor.py  projects.py  tasks.py  websocket.py
backend/models/: __init__.py  project.py  task.py
backend/schemas/: __init__.py  project.py  task.py
backend/tasks/: __init__.py  video_generation.py
cli/: __main__.py  project_io.py  ui_helpers.py
core/: ARCHITECTURE.md  __init__.py  config.py  contracts.py  dependency_check.py  generation_config.py  media.py  pipeline.py  project_paths.py  project_scanner.py  prompts.py  services.py  shared.py  startup.py  video_composer.py
core/cli/: __init__.py  main.py  project_io.py  ui_helpers.py
core/domain/: composer.py  metadata.py  summarizer.py
core/infra/: __init__.py
core/pipeline/: __init__.py  run_auto.py  scanner.py  service.py  steps.py
core/tests/: conftest.py  test_config_cleanup.py  test_dependency_check.py  test_input_file_scanning.py  test_opening_quote_markers.py  test_opening_remotion_source_name_passthrough.py  test_project_sorting.py  (+11 more)
frontend/: Dockerfile  index.html  nginx.conf  package.json
scripts/: install_macos.sh  install_windows.ps1
tools/: gen_single_media.py  test_google_genai_sample.py  validate_config.py
(+40 files in other folders)
