[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc_video"
version = "0.1.0"
description = "AIGC 视频生成与读书解说稿工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.100.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "Pillow>=11.3.0",
    "python-docx>=1.0.0",
    "ebooklib>=0.18",
    "pypdf>=4.0.0",
    "pdfplumber>=0.9.0",
    "pymupdf>=1.23.0",
    "mobi>=0.3.3",
    "moviepy>=2.0.0,<3",
    "numpy>=2.3.0",
    "volcengine-python-sdk[ark]>=1.0.94",
    "google-genai>=1.0.0",
    "json-repair>=0.26.0",
    "tiktoken>=0.5.0",
    "pytest>=8.4.0"
]

[tool.pytest.ini_options]
testpaths = ["core/tests"]
python_files = ["test_*.py"]
norecursedirs = [".git", ".venv", "venv", "node_modules", "build", "dist"]
